assignment 4 final submission

--- a/assignment4/products.html
+++ b/assignment4/products.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <header>
-            <div id="logo"> <a href="index.html"> <img src="logo.png" alt="logo"> </a> </div>
+            <div id="logo"> <a href="index.html"> <img src="images/logo.png" alt="logo"> </a> </div>
             <nav>
                 <a href="products.html" id="active">Cinnamons</a>
                 <a href="index.html">About</a>
@@ -27,17 +27,17 @@
         <div class="row">
             <div class="column">
             <a href="original.html"> 
-                <img src="original.png" alt="original">
+                <img src="images/original.png" alt="original">
                 <p class="caption"> Original - $3.50</p>
             </a>
             </div>
             <div class="column">
-                <img src="walnut.png" alt="walnut">
+                <img src="images/walnut.png" alt="walnut">
                 <p class="caption"> Walnut - $4.50 </p>
             </div>
             <div class="column">
             <a href="caramel.html">
-                <img src="caramel.png" alt="caramel">
+                <img src="images/caramel.png" alt="caramel">
                 <p class="caption">  Caramel Pecan - $4.50 </p>
             </a>
             </div>  
@@ -46,15 +46,15 @@
         <!-- second row of products -->
         <div class="row">
             <div class="column">
-                <img src="gluten.png" alt="gluten">
+                <img src="images/gluten.png" alt="gluten">
                 <p class="caption"> Original (Gluten Free) - $4.00 </p>
             </div>
             <div class="column">
-                <img src="blackberry.png" alt="blackberry">
+                <img src="images/blackberry.png" alt="blackberry">
                 <p class="caption"> Blackberry - $3.50 </p>
             </div>
             <div class="column">
-                <img src="pumpkin.png" alt="pumpkin">
+                <img src="images/pumpkin.png" alt="pumpkin">
                 <p class="caption"> Pumpkin Spice - $3.50 </p>
             </div>  
         </div>
