--- a/assignment4/caramel.html
+++ b/assignment4/caramel.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <header>
-            <div id="logo"> <a href="index.html"> <img src="logo.png" alt="logo"></a> </div>
+            <div id="logo"> <a href="index.html"> <img src="images/logo.png" alt="logo"></a> </div>
             <nav>
                 <a href="products.html">Cinnamons</a>
                 <a href="index.html">About</a>
@@ -25,7 +25,7 @@
         <div class="row1">
             <div class="column">
                 <h1> Caramel Pecan </h1>
-                <img src="caramel.png" id="caramel" alt="caramel">
+                <img src="images/caramel.png" id="caramel" alt="caramel">
                 <p> Made freshly in our own bakery, our caramel pecan cinnamon is filled with delight and joy at every bite. 
 
                 <br> <br> Ingredients: Wheat Flour, Unsalted Butter, Brown Sugar, Whole Egg, Sugar, Water, Caramel, Pecans, Corn Syrup, Milk, Vanilla Beans </p>
