--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <header>
-            <div id="logo"> <a href="index.html"> <img src="logo.png" alt="logo"> </a></div>
+            <div id="logo"> <a href="index.html"> <img src="images/logo.png" alt="logo"> </a></div>
             <!--  navigation bar  -->
             <nav>
                 <a href="products.html">Cinnamons</a>
