--- a/assignment4/original.html
+++ b/assignment4/original.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <header>
-            <div id="logo"> <a href="index.html"> <img src="logo.png" alt="logo"> </a> </div>
+            <div id="logo"> <a href="index.html"> <img src="images/logo.png" alt="logo"> </a> </div>
             <nav>
                 <a href="products.html">Cinnamons</a>
                 <a href="index.html">About</a>
@@ -26,7 +26,7 @@
             <div class="column">
                 <!-- first column -->
                 <h1> Original </h1>
-                <img src="original.png" id="original" alt="original">
+                <img src="images/original.png" id="original" alt="original">
                 <p> Made freshly in our own bakery, our original cinnamon has the softest dough with the richest tastes.
 
                 <br> <br> Ingredients: Wheat Flour, Unsalted Butter, Brown Sugar, Whole Egg, Sugar, Water, Corn Syrup, Milk, Vanilla Beans </p>
