--- a/assignment4/index.html
+++ b/assignment4/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -15,8 +17,8 @@
             <!--  navigation bar  -->
             <nav>
                 <a href="products.html">Cinnamons</a>
-                <a href="index.html">About</a>
-                <a href="index.html">Cart</a>
+                <a href="#">About</a>
+                <a href="cart.html" id="cart">Cart</a>
             </nav>
         </header>
 
