--- a/assignment4/products.html
+++ b/assignment4/products.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="products_style.css">
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,900" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,8 +16,8 @@
             <div id="logo"> <a href="index.html"> <img src="images/logo.png" alt="logo"> </a> </div>
             <nav>
                 <a href="products.html" id="active">Cinnamons</a>
-                <a href="index.html">About</a>
-                <a href="index.html">Cart</a>
+                <a href="#">About</a>
+                <a href="cart.html" id="cart">Cart</a>
             </nav>
         </header>
 
