--- a/finalProject/index.html
+++ b/finalProject/index.html
@@ -72,13 +72,13 @@
                   <div class="slide" id ="slide1.2">
                         <img src="assets/images/mountain.png" alt="Nagarkot">
                         <h1 class="caption"> 01 - Nagarkot </h1>
-                        <p class="caption1"> Nagarkot offers a panoramic view of the Kathmandu Vallue, making it a popular hiking route for tourists. </p>
+                        <p class="caption1"> Nagarkot offers a panoramic view of the Kathmandu Valley, making it a popular hiking route for tourists. </p>
                   </div>
                   <!-- next slide -->
                   <div class="slide" id ="slide1.3">
                         <img src="assets/images/gokyo.png" alt="Gokyo Lakes">
                         <h1 class="caption"> 02 - Gokyo Lake</h1>
-                        <p class="caption1"> Located at an altitude of 15,000+ feet above sea laeve, these lakes are the world's highest freshwater lake system.</p>
+                        <p class="caption1"> Located at an altitude of 15,000+ feet above sea level, these lakes are the world's highest freshwater lake system.</p>
                   </div>
                   <!-- next slide -->
                   <div class="slide" id ="slide1.4">
@@ -96,7 +96,7 @@
                   <div class="slide" id ="slide1.6">
                         <img src="assets/images/everest.png" alt="Everest">
                         <h1 class="caption"> 05 - Everest </h1>
-                        <p class="caption1"> Also known as Sagarmatha, it is the Earth's highesht mountain above sea level at 29,029 ft.</p>
+                        <p class="caption1"> Also known as Sagarmatha, it is the Earth's highest mountain above sea level at 29,029 ft.</p>
                   </div>
             </div>
 
